# pycastic

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude-plugin/: marketplace.json
.github/workflows/: bump-and-release.yml
plugins/pycastic/.claude-plugin/: plugin.json
plugins/pycastic/skills/refactoring-python/: SKILL.md
skills/refactoring-python/: SKILL.md
src/pycastic/: __init__.py  cli.py  core.py  errors.py  refactor.py
src/pyfactor/: __init__.py  cli.py  core.py  dependencies.py  errors.py  parsing.py  refactor.py  symbol_table.py
tests/: __init__.py  conftest.py  test_cli.py  test_core.py  test_parsing.py  test_refactor.py
