[project]
name = "pyfactor"
version = "0.1.0"
description = "Python refactoring CLI tool powered by rope"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "rope>=1.14.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
pyfactor = "pyfactor.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pyfactor"]
