[project]
name = "pycastic"
dynamic = ["version"]
description = "Python refactoring CLI tool powered by LibCST"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "libcst>=1.1.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
pycastic = "pycastic.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/pycastic/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/pycastic"]
